--- a/style.css
+++ b/style.css
@@ -66,6 +66,8 @@ ul {
 .icon-div {
     width: 30px;
     height: 30px;
+    /* display: inline-block; */
+    margin-right: 10px;
 }
 
 .card-body {
